# SQL_Editor_Engine

./: .gitignore  README.md  gen_large.py  main.py  pyproject.toml
data/: departments.csv  employees.csv  test_file.csv  users.csv
models/: ast_nodes.py  catalog.py  exceptions.py  plan.py  table.py  tokens.py
repl/: completer.py  formatter.py  history.py  repl.py
src/: pipeline.py
src/catalog/: catalog.py
src/executor/: aggregate_node.py  executor.py  filter_node.py  join_node.py  scan_node.py  sort_node.py
src/lexer/: lexer.py
src/optimizer/: optimizer.py
src/parser/: parser.py
src/planner/: query_planner.py
src/semantic/: analyzer.py
src/storage/: csv_reader.py
tests/: test_aggregation.py  test_executor.py  test_join.py  test_lexer.py  test_optimizer.py  test_parser.py  test_planner.py  test_repl.py  test_semantic.py
