[project]
name = "sql-engine-py"
version = "0.1.0"
description = "A SQL query engine built from scratch in Python"
requires-python = ">=3.11"
dependencies = [
    "prompt-toolkit>=3.0",
    "tabulate>=0.9",
    "pygments>=2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
sql-engine = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
